--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
             <li><a href="#">Artículo relacionado 1</a></li>
             <li><a href="#">Artículo relacionado 2</a></li>
             <li><a href="#">Artículo relacionado 3</a></li>
-        </ul
+        </ul>
     </aside>
 
     <!-- No modificar este <div> -->
     <div style="clear: both;"></div>
     
     <footer>
-        <p>&copy; <span id="currentYear"></span> Mi Blog. Todos los derechos reservados.</p>
+        <p>&copy; <span id="2025"></span> Mi Blog. Todos los derechos reservados.</p>
     </footer>
 
     <script>
         // Obtener el año actual
         const currentYear = new Date().getFullYear();
         // Insertar el año actual en el elemento con id "currentYear"
-        document.getElementById('currentYear').textContent = currentYear;
+        document.getElementById("2025").textContent = currentYear;
     </script>
 </body>
 </html>
